recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: not found: value recul
    recul(lenght)
    ^